// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders description 1`] = `
.c0 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c0:last-child {
  margin-bottom: 0;
}

<p
  class="c0"
>
  Foo
</p>
`;

exports[`renders description with link 1`] = `
.c0 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c0:last-child {
  margin-bottom: 0;
}

.c1 {
  -webkit-transition: all 70ms ease-out;
  transition: all 70ms ease-out;
  -webkit-transition-property: color;
  transition-property: color;
  color: #3C64F4;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 400;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active {
  color: #0024A6;
}

.c1:hover:not(:active) {
  color: #0024A6;
}

.c2 {
  font-size: 0.875rem;
}

<p
  class="c0"
>
  Foo
  <a
    class="c1 c2"
    href="f"
    target="t"
  >
    more
  </a>
</p>
`;
